--- a/generic/_generic.base.scss
+++ b/generic/_generic.base.scss
@@ -8,3 +8,4 @@ imports of external styles and fonts. */
 @import 'generic.fonts.scss';
 @import 'generic.resets.scss';
 @import 'generic.normalisations.scss';
+@import 'generic.print.scss';
