--- a/settings/_settings.responsive.scss
+++ b/settings/_settings.responsive.scss
@@ -15,8 +15,11 @@ $tablet-grid-columns:       8;
 $tablet-min-width:          em( 760px, $em-browser-default );
 $tablet-max-width:          em( 989px, $em-browser-default );
 
+// $tablet-portrait-max-width: 	em( 1024px, $em-browser-default );
+// $tablet-portrait-max-height: 	em( 768px, $em-browser-default );
+
 $desktop-grid-columns:      12;
-$desktop-min-width:         em( 990px, $em-browser-default );
+$desktop-min-width:         em( 990px, $em-browser-default ); //This should be bigger (1024px) to accomadate tablet portait.
 $desktop-max-width:         em( $base-width-px - 1 );
 
 $desktop-large-grid-columns: 16;
@@ -34,7 +37,8 @@ $mobile-large-and-bigger:   new-breakpoint( min-width $mobile-large-min-width $m
 $tablet:                    new-breakpoint( min-width $tablet-min-width
                                             max-width $tablet-max-width $tablet-grid-columns );
 $tablet-and-smaller:        new-breakpoint( max-width $tablet-max-width $tablet-grid-columns );
-$tablet-and-bigger:         new-breakpoint( min-width $tablet-min-width $tablet-grid-columns );
+$tablet-and-bigger:         new-breakpoint( min-width $tablet-min-width $tablet-grid-columns );	
+
 
 $desktop:                   new-breakpoint( min-width $desktop-min-width
                                             max-width $desktop-min-width $desktop-grid-columns );
