--- a/components/_components.degree-requirements.scss
+++ b/components/_components.degree-requirements.scss
@@ -1,4 +1,34 @@
 /*===============================
+=    ENTRY REQUIEMENTS BLOCK   =
+===============================*/
+
+.entry-req-container {
+    padding-bottom: 1.5em;
+    @include outer-container;
+    .degree-req {
+        @include fill-parent();
+        @include row(table);
+        .req-wrap {
+            @include media ($tablet-and-bigger) {
+                @include span-columns(12);
+            }
+        }
+        .btn-wrap {
+            @include media ($tablet-and-bigger) {
+                @include span-columns(4);
+                @include reset-display;
+            }
+            .btn {
+                @include media ($tablet-and-bigger) {
+                    margin: 0;
+                }
+            }
+        }
+    }
+}
+
+
+/*===============================
 =    DEGREE REQUIEMENTS BLOCK   =
 ===============================*/
 
@@ -22,6 +52,7 @@
         h3 {
             font-size: 1em;
             color: $grey-mine-shaft;
+            margin-bottom: 0;
             // padding-top: 0.3em;
         }
         p {
@@ -29,10 +60,10 @@
         }
         .greenify {
             color: $green-victoria;
-            font-size: 1.2em;
+            // font-size: 1.2em;
         }
         .req-child {
-            padding: 1.2em 0;
+            padding: 0.5em 0;
             h5 {
                 padding: 0.5em;
                 background-color: $grey-alto;
@@ -42,9 +73,8 @@
             .grand-child {
                 padding: 0.5em;
                 @include media ($tablet-and-bigger) {
-                   padding: 0.4em 1.2em;
+                    padding: 0.1em 1.2em 0.5em 1.2em;
                 }
-                
                 background-color: $grey-alto;
                 // margin-top: 0.3em;
                 p {
