--- a/components/_components.navigation.scss
+++ b/components/_components.navigation.scss
@@ -6,30 +6,25 @@
 /* ===== NAVIGATION MENU - TABS ============================================= */
 
 // Tabed menu - general
-$menu-tabbed-padding-horiz:     .7em !default;
-$menu-tabbed-padding-vertic:    .9em !default;
-
+$menu-tabbed-padding-horiz: .7em !default;
+$menu-tabbed-padding-vertic: .9em !default;
 // Single tab (~ menu item)
-$menu-tabbed-item-max-width:            $base-width / 4 !default; // accommodates up to 4 items
-$menu-tabbed-item-triangle-width:        1.5em !default;
-$menu-tabbed-item-triangle-height:      ( $menu-tabbed-item-triangle-width / 3 ) !default;
-
-$menu-tabbed-item-label-colour:         $grey-stack !default;
-
-$menu-tabbed-item-hover-label-colour:   $blue-curious-blue !default;
-$menu-tabbed-item-hover-bg-colour:      $grey-alto !default;
-
-$menu-tabbed-item-active-label-colour:  $white !default;
-$menu-tabbed-item-active-bg-colour:     $green-victoria !default;
-
+$menu-tabbed-item-max-width: $base-width / 4 !default; // accommodates up to 4 items
+$menu-tabbed-item-triangle-width: 1.5em !default;
+$menu-tabbed-item-triangle-height: ( $menu-tabbed-item-triangle-width / 3) !default;
+$menu-tabbed-item-label-colour: $grey-stack !default;
+$menu-tabbed-item-hover-label-colour: $blue-curious-blue !default;
+$menu-tabbed-item-hover-bg-colour: $grey-alto !default;
+$menu-tabbed-item-active-label-colour: $white !default;
+$menu-tabbed-item-active-bg-colour: $green-victoria !default;
 
 /* Menu or submenu using tab-like layout of its items. */
+
 .menu-tabbed {
     display: table;
     table-layout: fixed;
     width: 100%;
     text-align: center;
-
     // 1st level menu items
     & > li {
         position: relative;
@@ -38,39 +33,35 @@ $menu-tabbed-item-active-bg-colour:     $green-victoria !default;
         min-width: 21%;
         max-width: $menu-tabbed-item-max-width;
         vertical-align: middle;
-
+        outline: 0;
+       
         .ico:before {
             vertical-align: top;
             margin-right: .5em;
         }
+        
 
         // Selected or activated tab
         &.active {
             color: $white;
             background-color: $menu-tabbed-item-active-bg-colour;
-
             & > a {
                 color: inherit;
-
                 @include hoverify {
                     background-color: inherit;
                     color: inherit;
                 }
             }
-
             &:after {
                 @include objectify();
-                position: absolute; left: 50%; bottom: 0;
+                position: absolute;
+                left: 50%;
+                bottom: 0;
                 margin-left: -$menu-tabbed-item-triangle-width / 2;
                 margin-bottom: -$menu-tabbed-item-triangle-height;
-                @include triangle(
-                    $menu-tabbed-item-triangle-width $menu-tabbed-item-triangle-height,
-                    $menu-tabbed-item-active-bg-colour,
-                    down
-                );
+                @include triangle( $menu-tabbed-item-triangle-width $menu-tabbed-item-triangle-height, $menu-tabbed-item-active-bg-colour, down);
             }
         }
-
         & > a {
             display: inline-block;
             width: 100%;
@@ -80,10 +71,10 @@ $menu-tabbed-item-active-bg-colour:     $green-victoria !default;
             line-height: $caption-line-height;
             color: $grey-stack;
             text-decoration: none;
-
             @include hoverify {
                 background-color: $menu-tabbed-item-hover-bg-colour;
                 color: $menu-tabbed-item-hover-label-colour;
+                outline: 0;
             }
         }
     }
@@ -92,22 +83,21 @@ $menu-tabbed-item-active-bg-colour:     $green-victoria !default;
 // Makes two col button container with one button left & one right
 .two-btn-nav {
     @include make-table-column($two-btn-layout);
-
-    padding: 1.5em;
-
+    padding: 1.5em 0.5em;
     p {
         font-size: 80%;
         color: $grey-stack;
     }
-
     .btn {
         margin: 0;
     }
-
     &:last-child {
         .two-btn-wrap {
-            float: right; 
+            float: right;
             text-align: right;
         }
+    }
+    @include media ($tablet-and-bigger) {
+        padding: 1.5em;
     }
 }
