--- a/components/_components.simple-blocks.scss
+++ b/components/_components.simple-blocks.scss
@@ -6,7 +6,7 @@ $fun-fact-bg-color: $grey-gallery;
 .fun-fact {
     background-color: $fun-fact-bg-color;
     @include media ($desktop-and-bigger) {
-        padding: 1.75em;
+        // padding: 1.5em;
     }
     h2 {
         font-size: 2.5em;
@@ -106,14 +106,12 @@ $nm-bg-color: $grey-alto;
         padding: 1.5em;
         @include media( $tablet-and-bigger) {
             float: left;
-            
             @include make-table-column( $two-col-layout-left-ratio);
         }
     }
     .about-subjects-block {
         padding: 1.5em;
         border-bottom: 1px solid $grey-alto;
-
         @include media( $tablet-and-bigger) {
             border-left: 1px solid $grey-alto;
             border-bottom: 0;
@@ -137,7 +135,8 @@ $nm-bg-color: $grey-alto;
 
 .subject-block {
     .toggle-block {
-        h2 {
+        h2,
+        h3 {
             float: left;
         }
     }
@@ -162,7 +161,8 @@ $nm-bg-color: $grey-alto;
 
 .toggle-block {
     // padding-bottom: 0em;
-    h2 {
+    h2,
+    h3 {
         // float: left;
         a {
             text-decoration: none;
@@ -315,10 +315,21 @@ $mar-bot: 0.3em;
     }
 }
 
-
-.explore-page{
+.explore-page {
     @include outer-container;
+    // @include media ($mobile-large-and-bigger) {
     .block {
-        @include span-columns (6)
+        @include media ($tablet-and-bigger) {
+            @include span-columns (4);
+        }
+    }
+    // }
+}
+
+.explore-areas-page {
+    .block {
+        ul {
+            margin-left: 0.5em;
+        }
     }
 }
