--- a/objects/_objects.typography.scss
+++ b/objects/_objects.typography.scss
@@ -15,7 +15,7 @@
             margin: 0;
         }
     }
-    & > ul {
+    ul {
         line-height: 1.8;
         margin-left: 0;
         padding-left: 1em;
@@ -27,6 +27,11 @@
                 top: -0.1em;
                 margin-right: 1em;
             }
+        }
+    }
+    p + ul {
+        @include media ($tablet-and-bigger) {
+            margin-left: 1.5em;
         }
     }
 }
