Changes all main headings from normal font-weight to semi-bold one to make it stand out with the lighter green colour.

--- a/base/_base.typography.scss
+++ b/base/_base.typography.scss
@@ -8,7 +8,7 @@
 $heading-font-family:   $caption-font-family;
 $heading-line-height:   $caption-line-height;
 $heading-colour:        $green-victoria;
-$heading-weight:        $weight-light;
+$heading-weight:        $weight-semibold;
 
 
 
