--- a/objects/_objects.icons.scss
+++ b/objects/_objects.icons.scss
@@ -62,6 +62,8 @@ $ico-code-search:               '\e81b';
 //why is this not spelt .icon? Not typing the 'n' is just lazy - irwinna 1.3.16
 .ico {
 
+    font-weight: normal;
+
     &:before {
         @include iconify();
     }
