--- a/objects/_objects.icons.scss
+++ b/objects/_objects.icons.scss
@@ -124,6 +124,7 @@ $ico-code-search:               '\e81b';
 
     &.ext-link:before {
         display: inline;
+        margin-left: .3em;
     }
 }
 
